infra/kubernetes/infrastructure/argocd-ingress/argocd-ingress-route.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-https
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - argocd.memo.sehindemi.com
      secretName: argocd-server-tls
  rules:
    - host: argocd.memo.sehindemi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 80
